# llm-retrieval-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  GITHUB_SETUP.md  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.yml  main.py  push-to-github.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/workflows/: cd.yml  ci.yml
app/: __init__.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  chat.py  documents.py  health.py  retrieval.py
app/core/: config.py  logging.py  security.py
aws/glue/: document_ingestion_job.py
aws/lambda/: handler.py  requirements.txt
docs/: CONTRIBUTING.md  QUICKSTART.md
tests/: conftest.py
tests/unit/: test_auth.py  test_health.py
